// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə hɪge siːz ðə gʊdfe",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə bɔgez siː ðə gʊdfez",
    },
    {
      "english": "i give you the bread",
      "target": "aje gɪveɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə hɪge gɔheɪŋz æte ðə bɪvəbe",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə hɪge nate siːz ðə gʊdfe",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "rege βidereθ lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kanei βiderent lupuium",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "rege ambulareθ flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "rege non βidereθ lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi lukin hojeli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hohojeli lukin hohojeli",
    },
    {
      "english": "i give you the bread",
      "target": "mi kana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi tajatiwa hadʒi telohuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala lukin hojeli",
    },
  ],
  "preset": "tokipona",
}
`;
